[package]
name = "broker"
version = "15.1.0"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
edition = "2018"
license = "MIT"
keywords = ["sse", "identity", "baas", "broker", "real-time"]
description = "Real-time BaaS (Backend as a Service)"
repository = "https://github.com/apibillme/broker"
categories = ["web-programming::http-server", "database-implementations", "authentication"]
readme = "README.md"

[dependencies]
serde_json = "1"
tide = "0.16"
async-std = { version = "1.9", features = ["attributes"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
json = "0.12"
rocksdb = "0.15"
uuid = { version = "0.8", features = ["serde", "v4"] }
jsonwebtoken = "7"
go-flag = "0.1"
lazy_static = "1.4"
nippy = "2"
rust-argon2 = "0.8"
anyhow = "1"
rmp-serde = "0.15"
driftwood = "0.0.6"
http-types = "2"
tide-rustls = "0.3"
futures = "0.3"
tide-acme = "0.1.0"
base64 = "0.13"
mailchecker = "4"
zxcvbn = "2"
totp-rs = { version = "0.6", features = ["qr"] }
chbs = "0.1"
biscuit-auth = "1"
regex = "1"
