[package]
name = "broker"
version = "16.0.0"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
edition = "2021"
license = "MIT"
keywords = ["sse", "identity", "baas", "broker", "real-time"]
description = "Real-time BaaS (Backend as a Service)"
repository = "https://github.com/truemagic-coder/broker"
categories = ["web-programming::http-server", "database-implementations", "authentication"]
readme = "README.md"

[dependencies]
serde_json = "1"
tide = "0.16"
async-std = { version = "1.9", features = ["attributes"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
json = "0.12"
rocksdb = "0.22.0"
uuid = { version = "1.9.1", features = ["serde", "v4"] }
jsonwebtoken = "9.3.0"
go-flag = "0.1"
lazy_static = "1.4"
nippy = "2"
rust-argon2 = "2.1.0"
anyhow = "1"
rmp-serde = "1.3.0"
driftwood = "0.0.7"
http-types = "2"
tide-rustls = "0.3"
futures = "0.3"
tide-acme = "0.2.0"
base64 = "0.22.1"
mailchecker = "6.0.5"
zxcvbn = "3.0.1"
totp-rs = { version = "5.5.1", features = ["qr"] }
chbs = "0.1"
regex = "1"

[dev-dependencies]
reqwest = "0.12.5"
